--- a/main.css
+++ b/main.css
@@ -36,7 +36,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 0 20px 60px 20px;
+    padding: 0 20px 40px 20px;
     transition: .5s;
     position: fixed;
     top: 0;
@@ -59,7 +59,7 @@ body{
 
 .screen_bg_1{
   background-image: url('./photo.jpg');
-  background-size: contain;
+  background-size: cover;
   background-repeat: no-repeat;
 }
 
