--- a/main.css
+++ b/main.css
@@ -30,6 +30,58 @@ body{
     height: 100%;
 }
 
+.preloader{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+  /* background: rgb(97, 12, 52); */
+  flex-direction: column;
+  background: url('./photo-6.jpg');
+  background-size: cover;
+  transition: .5s;
+  opacity: 1;
+  transform: scale(1);
+}
+
+.preloader::before{
+  content: '';
+  display: flex;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: rgba(97, 12, 52, 0.897);
+  backdrop-filter: blur(2px);
+}
+
+.preloader__content{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  z-index: 1;
+}
+
+.preloader__icon{
+  width: 200px;
+  height: 200px;
+}
+
+.preloader__text{
+  font-weight: 200;
+  font-size: 18px;
+  transform: translateY(-30px);
+}
 .screen{
     width: 100%;
     height: 100%;
@@ -87,6 +139,18 @@ body{
   background-repeat: no-repeat;
 }
 
+.screen_bg_7{
+  background-image: url('./banana.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.screen_bg_8{
+  background-image: url('./end.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
 .screen_prize{
   background-image: url('./prized.jpg');
   background-size: cover;
@@ -111,6 +175,8 @@ body{
 
 .screen__images{
   display: flex;
+  align-items: center;
+  font-size: 20px;
 }
 
 .screen__images img {
@@ -183,6 +249,30 @@ body{
   left: 0;
 }
 
+.screen_bg_7::before{
+  content: '';
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(180deg, rgba(255,255,255,0.8) 0%, #ebebeb 90%);
+  position: absolute;
+  top: 0;
+  left: 0;
+  backdrop-filter: blur(2px);
+}
+
+.screen_bg_8::before{
+  content: '';
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(180deg, rgba(255,255,255,0.8) 0%, #ebebeb 90%);
+  position: absolute;
+  top: 0;
+  left: 0;
+  backdrop-filter: blur(2px);
+}
+
 .screen_prize::before{
   content: '';
   display: flex;
@@ -196,7 +286,7 @@ body{
 }
 
 .screen_question .screen__content{
-  height: 65%;
+  height: 60%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -365,6 +455,24 @@ input{
   position: absolute;
   top: 0;
   left: 0;
+}
+
+.prize-box::after{
+  content: '';
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background: rgba(251, 255, 247, .8);
+  position: absolute;
+  top: -100%;
+  left: 0;
+  z-index: 1;
+  transition: 3s;
+  backdrop-filter: blur(2px);
+}
+
+.prize-box--accept::after{
+  top: 0;
 }
 
 .arrow{
@@ -633,3 +741,149 @@ input{
   .animate__jello {
     animation: jello 1s forwards;
   }
+
+  .success-checkmark {
+    width: 80px;
+    height: 115px;
+    margin: 0 auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+ }
+  .success-checkmark .check-icon {
+    width: 80px;
+    height: 80px;
+    position: relative;
+    border-radius: 50%;
+    box-sizing: content-box;
+    /* border: 4px solid #4caf50; */
+ }
+  .success-checkmark .check-icon::before {
+    top: 3px;
+    left: -2px;
+    width: 30px;
+    transform-origin: 100% 50%;
+    border-radius: 100px 0 0 100px;
+ }
+  .success-checkmark .check-icon::after {
+    top: 0;
+    left: 30px;
+    width: 60px;
+    transform-origin: 0 50%;
+    border-radius: 0 100px 100px 0;
+    animation: rotate-circle 2.25s ease-in;
+ }
+  .success-checkmark .check-icon::before, .success-checkmark .check-icon::after {
+    content: '';
+    height: 100px;
+    position: absolute;
+    transform: rotate(-45deg);
+ }
+  .success-checkmark .check-icon .icon-line {
+    height: 5px;
+    background-color: #4caf50;
+    display: block;
+    border-radius: 2px;
+    position: absolute;
+    z-index: 10;
+ }
+  .success-checkmark .check-icon .icon-line.line-tip {
+    top: 46px;
+    left: 14px;
+    width: 25px;
+    transform: rotate(45deg);
+    animation: icon-line-tip 0.75s;
+ }
+  .success-checkmark .check-icon .icon-line.line-long {
+    top: 38px;
+    right: 8px;
+    width: 47px;
+    transform: rotate(-45deg);
+    animation: icon-line-long 0.75s;
+ }
+  .success-checkmark .check-icon .icon-circle {
+    top: -4px;
+    left: -4px;
+    z-index: 10;
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    position: absolute;
+    box-sizing: content-box;
+    /* border: 4px solid rgba(76, 175, 80, .5); */
+ }
+  .success-checkmark .check-icon .icon-fix {
+    top: 8px;
+    width: 5px;
+    left: 26px;
+    z-index: 1;
+    height: 85px;
+    position: absolute;
+    transform: rotate(-45deg);
+ }
+  @keyframes rotate-circle {
+    0% {
+      transform: rotate(-45deg);
+   }
+    5% {
+      transform: rotate(-45deg);
+   }
+    12% {
+      transform: rotate(-405deg);
+   }
+    100% {
+      transform: rotate(-405deg);
+   }
+ }
+  @keyframes icon-line-tip {
+    0% {
+      width: 0;
+      left: 1px;
+      top: 19px;
+   }
+    54% {
+      width: 0;
+      left: 1px;
+      top: 19px;
+   }
+    70% {
+      width: 50px;
+      left: -8px;
+      top: 37px;
+   }
+    84% {
+      width: 17px;
+      left: 21px;
+      top: 48px;
+   }
+    100% {
+      width: 25px;
+      left: 14px;
+      top: 45px;
+   }
+ }
+  @keyframes icon-line-long {
+    0% {
+      width: 0;
+      right: 46px;
+      top: 54px;
+   }
+    65% {
+      width: 0;
+      right: 46px;
+      top: 54px;
+   }
+    84% {
+      width: 55px;
+      right: 0px;
+      top: 35px;
+   }
+    100% {
+      width: 47px;
+      right: 8px;
+      top: 38px;
+   }
+ }
+  
