--- a/main.css
+++ b/main.css
@@ -151,6 +151,13 @@ body{
   background-repeat: no-repeat;
 }
 
+.screen_bg_9{
+  background-image: url('./idea.jpeg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
 .screen_prize{
   background-image: url('./prized.jpg');
   background-size: cover;
@@ -254,11 +261,10 @@ body{
   display: flex;
   width: 100%;
   height: 100%;
-  background: linear-gradient(180deg, rgba(255,255,255,0.8) 0%, #ebebeb 90%);
+  background: linear-gradient(180deg, rgba(255,255,255,0.8) 0%, #ebebebe0 90%);
   position: absolute;
   top: 0;
   left: 0;
-  backdrop-filter: blur(2px);
 }
 
 .screen_bg_8::before{
@@ -267,6 +273,18 @@ body{
   width: 100%;
   height: 100%;
   background: linear-gradient(180deg, rgba(255,255,255,0.8) 0%, #ebebeb 90%);
+  position: absolute;
+  top: 0;
+  left: 0;
+  backdrop-filter: blur(2px);
+}
+
+.screen_bg_9::before{
+  content: '';
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(180deg, rgba(255,255,255,0.8) 0%, #ebebebd5 90%);
   position: absolute;
   top: 0;
   left: 0;
